# Lemons

./: .clang-format  .clang-tidy  .cmake-format.json  .ecrc  .editorconfig  .gitattributes  .gitignore  .gitlint  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  AddCMakeModules.cmake  AddLemons.cmake  AllLemonsModules_8md.html  AudioAndMidiFIFO_8h.html  AudioBuffers_8h.html  AudioEffectEngine_8h.html  AudioEffect_8h.html  AudioEngine_8h.html  AudioFIFO_8h.html  AutomatedHarmonyVoice_8h.html  BVBrandFlags_8md.html  Bakefile  BasicProcessor_8h.html  BinaryDataHelpers_8h.html  Broadcaster_8h.html  BufferUtils_8h.html  CASLoop_8h.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  ChoosableOscillator_8h.html  CircularBuffer_8h.html  Coeffecients_8h.html  Common_2lemons__serializing_2SerializableData_2TreeReflector_2detail_2detail_8h.html  Common_2lemons__serializing_2SerializableData_2TreeReflector_2detail_8h.html  Common_8h.html  (+3063 more)
.github/: CODEOWNERS  (+7 more)
CMake/: CMakeLists.txt  publicAPI.cmake
CMake/Scripts/: CMakeUtils.cmake  DirectoryHelpers.cmake  internal.cmake  publicAPI.cmake
CMake/internal/: CMakeLists.txt  config_synth_module.cmake  configureHelpers.cmake  directoryHelpers.cmake  plugin_format_helpers.cmake  resourcesHelpers.cmake  resources_helpers.cmake
CMake/internal/native/: Apple.cmake  Windows.cmake
CMake/native/: Apple.cmake
TestLab/: CMakeLists.txt
cmake/: BrandSpecific.cmake  CMakeLists.txt  FileUtilities.cmake  Makefile  apps.cmake  assets.cmake  configure_helpers.cmake  deploy.cmake  env.cmake  install.cmake  plugin_formats.cmake  plugins.cmake  public_api.cmake  sanitizers.cmake  utilities.cmake
cmake/ccache/: CMakeLists.txt
cmake/config/: CMakeLists.txt  plugins.cmake
cmake/cpack/: CMakeLists.txt  LSBInfo.cmake  deb_settings.cmake  rpmPostInstall.sh  set_default_generator.cmake
cmake/cpack/generators/: CMakeLists.txt  gen_settings.cmake  set_default_generator.cmake
cmake/integrations/: CMakeLists.txt  clang_format.cmake  clang_tidy.cmake  cpp_check.cmake  sanitizers.cmake
cmake/integrations/ccache/: CMakeLists.txt  launch-c.in
cmake/integrations/clang_format/: CMakeLists.txt  run_clang_format.cmake
cmake/internal/: BrandSpecific.cmake  CMakeLists.txt  CommandLineArgs.cmake  GitHooks.cmake  concepts.cmake  configure_helpers.cmake  directory_helpers.cmake  juce_module_helpers.cmake  plugin_format_helpers.cmake  resources_helpers.cmake
cmake/native/: Apple.cmake  CMakeLists.txt  Linux.cmake  install_juce_linux_deps.sh
cmake/plugins/: CMakeLists.txt  format_specific_config.cmake  plugin_config.cmake  plugin_format_helpers.cmake  plugin_hosting_config.cmake
cmake/project_repo_config/: CMakeLists.txt  GitHub_scripts.cmake  clang_format.cmake  git.cmake
cmake/public/: CMakeLists.txt  FileUtilities.cmake  assets.cmake  public_api.cmake  utilities.cmake
cmake/tooling/: CMakeLists.txt  sanitizers.cmake  static_analysis.cmake
cmake/utilities/: CMakeLists.txt
cmake/utils/: CMakeLists.txt  GetSourceFilesFromTarget.cmake
modules/: AllLemonsModules.cmake  CMakeLists.txt  LemonsAppModules.cmake  LemonsCommonModules.cmake  LemonsJuceModulesConfig.cmake  LemonsPluginModules.cmake
modules/Apps/: CMakeLists.txt  LemonsAppModules.cmake  apps.txt
modules/Audio/: CMakeLists.txt  LemonsAudioModules.cmake  audio.txt
modules/Common/: CMakeLists.txt  LemonsCommonModules.cmake  common.txt
modules/Connectivity/: LemonsConnectivityModules.cmake  connectivity.txt
modules/DSP/: CMakeLists.txt
modules/GUI/: CMakeLists.txt  LemonsGUIModules.cmake  gui.txt
modules/MIDI/: CMakeLists.txt
modules/Plugins/: CMakeLists.txt  LemonsPluginModules.cmake  plugins.txt
modules/Testing/: LemonsTestingModules.cmake
modules/ableton_push_display/: ableton_push_display.cpp  ableton_push_display.h
modules/bv_SharedCode/: bv_SharedCode.cpp  bv_SharedCode.h
modules/bv_core/: bv_core.cpp  bv_core.h
modules/bv_data_model/: bv_data_model.cpp  bv_data_model.h
modules/bv_dsp/: bv_dsp.cpp  bv_dsp.h
modules/bv_gui/: bv_gui.cpp  bv_gui.h
modules/bv_midi/: bv_midi.cpp  bv_midi.h
modules/bv_mobile_utils/: bv_mobile_utils.cpp  bv_mobile_utils.h
modules/bv_motion/: bv_motion.cpp  bv_motion.h
modules/bv_mts_esp_client/: bv_mts_esp_client.cpp  bv_mts_esp_client.h
modules/bv_networking/: bv_networking.cpp  bv_networking.h
modules/bv_plugin/: EditorBase.h  bv_plugin.cpp  bv_plugin.h
modules/bv_synth/: bv_synth.cpp  bv_synth.h  sine_synth.h
resources/: CMakeLists.txt  build_LV2.sh  example_project_CMakeLists.txt  get_shared_code.cmake  install_juce_linux_deps.sh
templates/: CMakeLists.txt
util/: CMakeLists.txt  lemons_header.txt
util/CommandLineUtils/: CMakeLists.txt
util/KeyFileGenerator/: CMakeLists.txt  Main.cpp
util/PluginMetadataEditor/: CMakeLists.txt  Main.cpp
util/RSAKeyGenerator/: CMakeLists.txt  Main.cpp
util/Templates/: CMakeLists.txt
util/UnitTestRunner/: CMakeLists.txt  Main.cpp
util/cmake/: CMakeLists.txt  FileUtilities.cmake  export_cmake_package.cmake  plugin_formats.cmake
util/cpack/: CMakeLists.txt  linux_lsb.cmake
util/doxygen/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  cmake_api.md  copy_main_page.cmake  main_page.md  process_cmake_modules.py  process_juce_modules.py  process_modules.py  process_source_files.py
util/install_deps/: deps_list.txt  install_deps.sh  install_list.sh  juce_linux_deps.txt
util/make/: Makefile  basic_settings.make  cmake.make  git.make  logs.make  process_logs.py  system.make  targets.make  translations.make
util/psola_test/: CMakeLists.txt  Main.cpp
util/scripts/: git_uth.cmake
util/templates/: CMakeLists.txt
util/testing/: CMakeLists.txt  pluginval.cmake  run_tests.cmake
util/tests/: BuildAllModulesIndividually.cmake  CMakeLists.txt  ModuleTestMain.cpp
util/toolchains/: ios.cmake
util/translations/: config_project_translations.py  config_shared_translations.py  country_codes.py  generate_template.py  generate_translations.py  merge_templates.py  options.py  source_scanner.py  translation_config.txt
(+4340 files in other folders)
