if (NOT (APPLE OR WIN32))
	include (linux_lsb.cmake)
endif()

add_subdirectory (generators)


set (CPACK_STRIP_FILES TRUE CACHE INTERNAL "") 


if (NOT CPACK_PACKAGE_NAME)
    if (CMAKE_SYSTEM_NAME MATCHES "Linux")
      	#set (CPACK_PACKAGE_NAME ${LOWER_PROJECT_NAME})
    else()
      	set (CPACK_PACKAGE_NAME ${PROJECT_NAME} CACHE INTERNAL "") # default CPack behaviour
    endif()
endif()

if (NOT CPACK_PACKAGE_VENDOR)
	#set (CPACK_PACKAGE_VENDOR ${${UPPER_PROJECT_NAME}_VENDOR})
endif()

set (CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR} CACHE INTERNAL "")
set (CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR} CACHE INTERNAL "")
set (CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH} CACHE INTERNAL "")

if (COMMON_PACKAGE_RELEASE)
	#set (CPACK_PACKAGE_VERSION ${PROJECT_VERSION}-${COMMON_PACKAGE_RELEASE})
else()
	set (CPACK_PACKAGE_VERSION ${PROJECT_VERSION} CACHE INTERNAL "")
endif()

if (NOT CPACK_PACKAGE_CONTACT)
	#set (CPACK_PACKAGE_CONTACT ${${UPPER_PROJECT_NAME}_MAINTAINER})
endif()

if (NOT CPACK_PACKAGE_DESCRIPTION_SUMMARY)
	#set (CPACK_PACKAGE_DESCRIPTION_SUMMARY ${${UPPER_PROJECT_NAME}_DESCRIPTION})
endif()
